:heavy_check_mark: Сборка #4

--- a/4/index.html
+++ b/4/index.html
@@ -57,7 +57,7 @@
     <section class="advantages-list">
       <h3 class="visually-hidden">Преимущества</h3>
       <ul class="advantages-list">
-        <li class="advantages-item"><span class="advantages1"> ГОРОДОК</span>
+        <li class="advantages-item"><span class="advantages1">НАСТОЯЩИЙ ГОРОДОК</span>
           <p class="description-item">Седона-не атракцион для туристов,там течет своя жизнь</p>
         </li>
         <li class="advantages-item-2">
