--- a/4/catalog.html
+++ b/4/catalog.html
@@ -90,25 +90,26 @@
           </ul>
         </fieldset>
       </div>
-      </div>
+
       <div class="filter4">
          <p>Стоимость, ₽</p>
          <p>
-             <div class="field">
+
              <span>От</span>
-             <input type="number" class="input-min" value="0">
+             <input type="number"  class="input-min"  value="0">
            </div></p>
-           <div class="field">
+      <div class="filter5">
             <span>До</span>
             <input type="number" class="input-max" value="9000">
           </div>
-          </div>
-          <div class="slider">
-          <div class="progress"></div>
-        </div>
-      </div>
-      <button class="button-submit" type="submit">Применить</button>
+
+
+
+     <div class="filter 6">
+      <button class="button-submit1" type="submit">Применить</button>
       <button class="button-reset" type="button">Сбросить</button>
+      </div>
+    </div>
     </form>
 </section>
     <h2>Найдено гостиниц:38<h2>
@@ -143,7 +144,9 @@
             <path d="M16 12H4V14H16V12Z" fill="black"/>
           </svg></button></li>
         </ul>
-        <ul class="hotel">
+
+        <ul class="style-ul">
+          <div class="hotel">
           <div class="hotel1">
           <li>
 
@@ -157,50 +160,46 @@
               <a href="#">Amara Resort&Spa</a>
           </li>
           </p>
-          <p>Гостиница</p>
-          <p><span>От 4000</span></p>
+
+             <p>Гостиница</p>
+             <p><span>От 4000</span></p>
           <ul>
             <li><button class="button-submit" type="submit">Подробнее</button></li>
             <li><button class="button-submit" type="submit">В ИЗБРАННОЕ</button>
             <p>4 звезды</p></li>
             <li><button class="button-submit" type="submit">рейтинг 8.5</button></li>
           </ul>
-</div>
-<div class="hotel2">
-<li>
+          </div>
+       <div class="hotel2">
+               <li>
+                   <p> <a href="#"><img src="images/catalog/hotel-2.jpg" width="300" height="212"
+                       alt="Восход солнца из-за гор с выходящей радугой">
+                        </a></p>
 
 
-            <p> <a href="#"><img src="images/catalog/hotel-2.jpg" width="300" height="212"
-                  alt="Восход солнца из-за гор с выходящей радугой">
-              </a></p>
+                     <p>
+                      <a href="#">Villas at Poco Diablo</a></p>
+                 </li>
 
-
-            <p>
-              <a href="#">Villas at Poco Diablo</a>
-          </li>
-          </p>
-          <p>Гостиница</p>
-          <p><span>От 5000</span></p>
-          <ul>
+                      <p>Гостиница</p>
+                       <p><span>От 5000</span></p>
+                       <ul>
             <li><button class="button-submit" type="submit">Подробнее</button></li>
             <li><button class="button-submit" type="submit">В ИЗБРАННОЕ</button>
             <p>4 звезды</p></li>
             <li><button class="button-submit" type="submit">рейтинг 9.2</button></li>
           </ul>
 
-</div>
-          <li class="hotel3 ">
-
-
-            <p> <a href="#"><img src="images/catalog/hotel-3.jpg" width="300" height="212"
+        </div>
+            <div class="hotel3">
+           <li>
+              <p> <a href="#"><img src="images/catalog/hotel-3.jpg" width="300" height="212"
                   alt="Горный хребет усыпанный зеленью.">
               </a></p>
-
-
-            <p>
-              <a href="#">Desert Quail Inn</a>
+              <p>
+              <a href="#">Desert Quail Inn</a></p>
           </li>
-          </p>
+
           <p>Гостиница</p>
           <p><span>От 2500</span></p>
           <ul>
@@ -209,18 +208,18 @@
             <p>3 звезды</p></li>
             <li><button class="button-submit" type="submit">рейтинг 6.9</button></li>
           </ul>
-
-
-          <li class="hotel4">
+        </div>
+          <div class="hotel4">
+          <li >
             <p><a href="#"><img src="images/catalog/hotel-4.jpg" width="300" height="212"
                   alt="Ночной вид на горный хребет в оранжевом отливе.">
               </a></p>
 
 
             <p>
-              <a href="#">GreenTree Inn</a>
+              <a href="#">GreenTree Inn</a></p>
           </li>
-          </p>
+
           <p>Гостиница</p>
           <p><span>От 1500</span></p>
           <ul>
@@ -229,8 +228,10 @@
             <p>2 звезды</p></li>
             <li><button class="button-submit" type="submit">рейтинг 5.0</button></li>
           </ul>
-
+          </div>
+          </div>
         </ul>
+
         <ul>
           <li>
             <a href="#"> 1</a>
@@ -269,20 +270,20 @@
       </form>
     </div>
     <div class="contacts">
-    <ul>
-      <li class="contacts-item"><a class="contacts-name" href="https:vk.ru/"><svg xmlns="http://www.w3.org/2000/svg"
+    <ul class="seti">
+      <li class="contacts-item1"><a class="contacts-name" href="https:vk.ru/"><svg xmlns="http://www.w3.org/2000/svg"
             width="24" height="14" viewBox="0 0 24 14" fill="none">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M23.45 0.948C23.616 0.402 23.45 0 22.655 0H20.03C19.362 0 19.054 0.347 18.887 0.73C18.887 0.73 17.552 3.926 15.661 6.002C15.049 6.604 14.771 6.795 14.437 6.795C14.27 6.795 14.019 6.604 14.019 6.057V0.948C14.019 0.292 13.835 0 13.279 0H9.151C8.734 0 8.483 0.304 8.483 0.593C8.483 1.214 9.429 1.358 9.526 3.106V6.904C9.526 7.737 9.373 7.888 9.039 7.888C8.149 7.888 5.984 4.677 4.699 1.003C4.45 0.288 4.198 0 3.527 0H0.9C0.15 0 0 0.347 0 0.73C0 1.412 0.89 4.8 4.145 9.281C6.315 12.341 9.37 14 12.153 14C13.822 14 14.028 13.632 14.028 12.997V10.684C14.028 9.947 14.186 9.8 14.715 9.8C15.105 9.8 15.772 9.992 17.33 11.467C19.11 13.216 19.403 14 20.405 14H23.03C23.78 14 24.156 13.632 23.94 12.904C23.702 12.18 22.852 11.129 21.725 9.882C21.113 9.172 20.195 8.407 19.916 8.024C19.527 7.533 19.638 7.314 19.916 6.877C19.916 6.877 23.116 2.451 23.449 0.948H23.45Z"
               fill="#83B3D3" />
           </svg></a></li>
-      <li class="contacts-item"><a class="contacts-name" href="https:Telegram.org/"><svg
+      <li class="contacts-item2"><a class="contacts-name" href="https:Telegram.org/"><svg
             xmlns="http://www.w3.org/2000/svg" width="18" height="16" viewBox="0 0 18 16" fill="none">
             <path
               d="M16.785 0.0992597L0.840489 6.24776C-0.247661 6.68481 -0.241365 7.29184 0.640845 7.56253L4.73445 8.83953L14.2058 2.8637C14.6537 2.59121 15.0629 2.7378 14.7265 3.03636L7.05283 9.96185H7.05103L7.05283 9.96275L6.77045 14.1823C7.18413 14.1823 7.36669 13.9925 7.59871 13.7686L9.58705 11.8351L13.7229 14.89C14.4855 15.31 15.0332 15.0941 15.2229 14.1841L17.9379 1.38885C18.2158 0.274623 17.5126 -0.229883 16.785 0.0992597Z"
               fill="#83B3D3" />
           </svg></a></li>
-      <li class="contacts-item"><a class="contacts-name" href="https:Youtube.ru/"><svg
+      <li class="contacts-item3"><a class="contacts-name" href="https:Youtube.ru/"><svg
             xmlns="http://www.w3.org/2000/svg" width="22" height="17" viewBox="0 0 22 17" fill="none">
             <path
               d="M18.607 0H3.17413C1.31343 0 0 1.59375 0 3.4V13.4937C0 15.4062 1.31343 17 3.17413 17H18.8259C20.4677 17 22 15.4062 22 13.6V3.4C21.7811 1.59375 20.4677 0 18.607 0ZM7.66169 12.5375V4.4625L14.995 8.5L7.66169 12.5375Z"
