--- a/4/catalog.html
+++ b/4/catalog.html
@@ -14,25 +14,29 @@
         height="70" alt="Логотип CITY OF SEDONA">
       </a>
       <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">Главная</a>
+        <li class="navigation-item1">
+          <a class="navigation-link1" href="#">Главная</a>
         </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">О Cедоне</a>
+        <li class="navigation-item2">
+          <a class="navigation-link2" href="#">О Cедоне</a>
         </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+        <li class="navigation-item3">
+          <a class="navigation-link3" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+      <ul class="navigation-user">
+        <li class="navigation-item4">
+          <a class="navigation-link4" href="#"><span><svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+            <path d="M18.5 17.0083L14.8 13.3287C15.8 12.0359 16.5 10.3453 16.5 8.4558C16.5 4.08011 12.9 0.5 8.5 0.5C4.1 0.5 0.5 4.17956 0.5 8.55525C0.5 12.9309 4.1 16.511 8.5 16.511C10.3 16.511 12 15.9144 13.4 14.8204L17.1 18.5L18.5 17.0083ZM8.5 14.5221C5.2 14.5221 2.5 11.837 2.5 8.55525C2.5 5.27348 5.2 2.5884 8.5 2.5884C11.8 2.5884 14.5 5.27348 14.5 8.55525C14.5 11.837 11.8 14.5221 8.5 14.5221Z" fill="black"/>
+            </svg></span></a>
         </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">12</a>
+        <li class="navigation-item5">
+          <a class="navigation-link5" href="#">12<svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" viewBox="0 0 18 17" fill="none">
+            <path d="M8.9 17C8.6 17 8.3 16.9 8.1 16.6C2.7 10.5 1.4 9.1 1.1 8.7C0.4 7.8 0 6.6 0 5.4C0 2.4 2.4 0 5.5 0C6.8 0 8 0.5 9 1.3C10 0.5 11.3 0 12.5 0C15.5 0 18 2.4 18 5.4C18 6.7 17.5 7.9 16.7 8.8L9.7 16.7C9.5 16.9 9.3 17 8.9 17ZM2.9 7.5C3.2 7.9 6.4 11.5 9 14.4L15.2 7.4C15.7 6.9 15.9 6.2 15.9 5.4C15.9 3.6 14.4 2.1 12.6 2.1C11.6 2.1 10.6 2.6 9.9 3.4C9.6 3.7 9.3 3.8 9 3.8C8.7 3.8 8.4 3.6 8.2 3.4C7.5 2.6 6.5 2.1 5.5 2.1C3.7 2.1 2.2 3.6 2.2 5.4C2.1 6.3 2.5 7 2.9 7.5C2.8 7.5 2.8 7.5 2.9 7.5Z" fill="black"/>
+            </svg></a>
         </li>
-        <li class="navigation-item"></li>>
-        <a class="navigation-link" href="#">Хочу сюда!</a>
+        <li class="navigation-item6"></li>
+        <a class="navigation-link6" href="#">Хочу сюда!</a>
         </li>
       </ul>
 
@@ -42,7 +46,7 @@
 
   <main data-test="main">
 <section class="filter">
-    <h1>Гостиницы Седоны</h1>
+    <h1 class="title">Гостиницы Седоны</h1>
     <ul>
       <li>Вернуться на главную</li>
       <li><a href="catalog.html">Гостиницы</a></li>
@@ -53,7 +57,7 @@
 
       <div class="filter1" >
         <div class="filter2">
-        <fieldset>
+        <fieldset class="filter33">
           <legend>Инфраструктура:</legend>
           <ul>
             <li class="filter-item"> <input type="checkbox" name="subscribe" id="subscribe-field" checked>
@@ -70,8 +74,8 @@
         </fieldset>
            </div>
            <div class="filter3">
-        <fieldset>
-          <legend>Тип жилья:</legend>
+        <fieldset class="filter33">
+          <legend >Тип жилья:</legend>
           <ul>
             <li class="filter-item"> <input type="checkbox" name="subscribe" id="subscribe-field" checked>
               <label for="subscribe-field">Гостиница</label>
@@ -102,38 +106,36 @@
             <span>До</span>
             <input type="number" class="input-max" value="9000">
           </div>
-
-
-
-     <div class="filter 6">
-      <button class="button-submit1" type="submit">Применить</button>
-      <button class="button-reset" type="button">Сбросить</button>
+       <div class="filter6">
+            <button class="button-submit1" type="submit">Применить</button>
+            <button class="button-reset1" type="button">Сбросить</button>
       </div>
     </div>
     </form>
 </section>
-    <h2>Найдено гостиниц:38<h2>
-        <form class="sorting" action="https://htmlacademy.ru/" method="get">
+<div class="sorting">
+    <div class="sorting1"<h2>Найдено гостиниц:38</h2></div>
+        <div class="sorting2"><form  action="https://htmlacademy.ru/" method="get">
           <select class="select-control" aria-label="Сортировка">
             <option selected="">Сначала дешевые</option>
             <option>Сначала дороже</option>
             <option>По популярности</option>
           </select>
-        </form>
-        <ul>
-          <li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+        </form></div>
+        <ul class="layout">
+          <div class="sorting3"><li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
             <path d="M4 0H0V6H4V0Z" fill="black"/>
             <path d="M16 0H12V6H16V0Z" fill="black"/>
             <path d="M10 0H6V6H10V0Z" fill="black"/>
             <path d="M4 8H0V14H4V8Z" fill="black"/>
             <path d="M16 8H12V14H16V8Z" fill="black"/>
             <path d="M10 8H6V14H10V8Z" fill="black"/>
-            </svg></button></li>
-          <li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+            </svg></button></li></div>
+          <div class="sorting4"><li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
             <path d="M16 12H0V14H16V12Z" fill="black"/>
             <path d="M14 2V8H2V2H14ZM16 0H0V10H16V0Z" fill="black"/>
-          </svg></button></li>
-          <li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
+          </svg></button></li></div>
+         <div class="sorting5" <li><button class="button-submit" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 0 16 14" fill="none">
             <path d="M2 0H0V2H2V0Z" fill="black"/>
             <path d="M16 0H4V2H16V0Z" fill="black"/>
             <path d="M2 4H0V6H2V4Z" fill="black"/>
@@ -142,9 +144,9 @@
             <path d="M16 8H4V10H16V8Z" fill="black"/>
             <path d="M2 12H0V14H2V12Z" fill="black"/>
             <path d="M16 12H4V14H16V12Z" fill="black"/>
-          </svg></button></li>
+          </svg></button></li></div>
         </ul>
-
+</div>
         <ul class="style-ul">
           <div class="hotel">
           <div class="hotel1">
